# dreamcast-cdi-burner

./: .gitmodules  DCDIB.scpt  README.md  applet.icns  build  build-all  build.md  cdib  cdirip-0.6.2_Makefile.osx  changelog.md  dcdib  install_linux  license.md  readme.html  readme.md  uninstall_linux
.github/: FUNDING.yml
DCDIB.app/Contents/: Info.plist
build_select_1.0.1/: bselect  install  license.txt  readme.txt  uninstall
cdirip-0.6.2/: audio.c  cdi.c  cdirip.c  cdirip.h  common.c  common.h
cdirip-0.6.3/: Makefile  Makefile.linux  buffer.c  cdirip.c
cdrtools-3.02a09/: ABOUT  AN-2.0  AN-2.01  AN-3.00  AN-3.01  AN-3.02a01  AN-3.02a02  AN-3.02a03  AN-3.02a04  AN-3.02a05  AN-3.02a06  AN-3.02a07  AN-3.02a08  AN-3.02a09  BUILD  CONTRIBUTING  Changelog  Changelog.1  MKNOD.hpux  MKNOD.hpux-800  Makefile  Mcsw  Mocsw  PORTING  README  README.BSDi  README.FreeBSD  README.NetBSD  README.OpenBSD  README.QNX  README.SSPM  README.apple  README.linux-shm  README.mkisofs  README.openserver  README.os2  README.sgi  README.unixware  README.vms  README.xxxBSD  (+5 more)
cdrtools-3.02a09/DEFAULTS/: Defaults.aix  Defaults.amigaos  Defaults.beos  Defaults.bitrig  Defaults.bsd-os  Defaults.bsd-os3  Defaults.cygwin32_nt  Defaults.cygwin32_wow  Defaults.cygwin32_wow64  Defaults.darwin  Defaults.dgux  Defaults.dgux3  Defaults.dgux4  Defaults.domainos  Defaults.dragonfly  Defaults.freebsd  Defaults.freemint  Defaults.gnu  Defaults.gnu-kfreebsd  Defaults.haiku  Defaults.hp-ux  Defaults.interix  Defaults.irix  Defaults.linux  Defaults.mac-os10  Defaults.mingw32_nt  Defaults.minix  Defaults.ms-dos  Defaults.netbsd  Defaults.newsos6  Defaults.nextstep  Defaults.openbsd  Defaults.openserver  Defaults.openvms  Defaults.os2  Defaults.osf1  Defaults.pyro  Defaults.qnx  Defaults.rhapsody  Defaults.sunos4  (+8 more)
cdrtools-3.02a09/DEFAULTS_CSW/: Defaults.sunos5  sparc-cc.defs
cdrtools-3.02a09/DEFAULTS_ENG/: Defaults.aix  Defaults.amigaos  Defaults.beos  Defaults.bitrig  Defaults.bsd-os  Defaults.bsd-os3  Defaults.cygwin32_nt  Defaults.cygwin32_wow  Defaults.cygwin32_wow64  Defaults.darwin  Defaults.dgux  Defaults.dgux3  Defaults.dgux4  Defaults.domainos  Defaults.dragonfly  Defaults.freebsd  Defaults.freemint  Defaults.gnu  Defaults.gnu-kfreebsd  Defaults.haiku  Defaults.hp-ux  Defaults.interix  Defaults.irix  Defaults.linux  Defaults.mac-os10  Defaults.mingw32_nt  Defaults.minix  Defaults.ms-dos  Defaults.netbsd  Defaults.newsos6  Defaults.nextstep  Defaults.openbsd  Defaults.openserver  Defaults.openvms  Defaults.os2  Defaults.osf1  Defaults.pyro  Defaults.qnx  Defaults.rhapsody  Defaults.sunos4  (+8 more)
cdrtools-3.02a09/READMEs/: README.aix  README.gmake  README.hpux  README.install  README.linux  README.macosX  README.macosX-old-versions  README.mingw32  README.msdos  README.ppc  README.solaris  README.sunos  README.win32
cdrtools-3.02a09/RULES/: 9000-725-hp-ux-cc.rul  9000-725-hp-ux-gcc.rul  MKLINKS  README  alpha-openvms-cc.rul  alpha-osf1-cc.rul  alpha-osf1-gcc.rul  amd64-bitrig-clang.rul  atarist-freemint-gcc.rul  aviion-dgux3-cc.rul  aviion-dgux3-gcc.rul  aviion-dgux4-cc.rul  aviion-dgux4-gcc.rul  bemac-beos-cc.rul  bemac-beos-mwcc.rul  bepc-beos-cc.rul  bepc-beos-gcc.rul  bepc-haiku-cc.rul  bepc-haiku-gcc.rul  cc-apollo.rul  cc-bemwcc.rul  cc-clang.rul  cc-dec.rul  cc-dg.rul  cc-dumb.rul  cc-gcc.rul  cc-hp.rul  cc-hp64.rul  cc-ibm.rul  cc-msc.rul  cc-msc64.rul  cc-msposix.rul  cc-openvms.rul  cc-pcc.rul  cc-sco_os.rul  cc-sco_uw.rul  cc-sgi.rul  cc-sgi64.rul  cc-sony.rul  cc-sun.rul  (+257 more)
cdrtools-3.02a09/TARGETS/: 15conf  25inc  25include  43libschily  44libdeflt  44libscg  44libscg!@!scg  45lib  45libcdrdeflt  45libedc  45libfile  45libfind  45libhfs_iso  45libmdigest  45libparanoia  45librscg  45libscgcmd  45libsiconv  45libsiconv!@!tables  55btcflash  55cdda2wav  55cdrecord  55cmd  55mkisofs  55mkisofs!@!diag  55readcd  55rscsi  55scgcheck  55scgskeleton  85man  README  Targetdirs  __slot
cdrtools-3.02a09/TEMPLATES/: Defaults.clang  Defaults.gcc  Defaults.xcc  MKLINKS  Makefile.aux  Makefile.cmd  Makefile.dir  Makefile.drv  Makefile.lib  Makefile.loc  Makefile.man  Makefile.mks  Makefile.mod  Makefile.root  Makefile.scr  Makefile.shl  Makefile.wrap  Makefile_de.man  noshlxxx.mk  temp-clang.rul  temp-gcc.rul  temp-xcc.rul
cdrtools-3.02a09/autoconf/: acgeneral.m4  aclocal.m4  acoldnames.m4  acspecific.m4  autoconf  config.guess  config.sub  configure  configure.in  rules.cnf.in  xconfig.h.in
cdrtools-3.02a09/btcflash/: MKLINKS  Makefile  Makefile.man  btcflash.1  btcflash.c  skel.c
cdrtools-3.02a09/cdda2wav/: Changelog  FAQ  Frontends  HOWTOUSE  MKLINKS  Makefile  Makefile.man  Makefile.rd  NEEDED  OtherProgs  README  THANKS  TODO  aifc.c  aifc.h  aiff.c  aiff.h  autoconf_  base64.c  base64.h  build_cdda2wav.com  byteorder.h  cd_extra.c  cd_text.c  cdda2mp3  cdda2mp3.1  cdda2mp3.mk  cdda2mp3.mk1  cdda2mp3.new  cdda2ogg  cdda2ogg.1  cdda2ogg.mk  cdda2ogg.mk1  cdda2wav.1  cdda2wav.c  cdda2wav.h  cdda_links  config.h  configure  configure.in  (+40 more)
cdrtools-3.02a09/cdrecord/: LICENSE  Makefile  Makefile.dfl  Makefile.doc  Makefile.man  README  README.ATAPI  README.DiskT@2  README.WORM  README.audio  README.cdplus  README.cdrw  README.cdtext  README.clone  README.copy  README.multi  README.parallel  README.raw  README.rscsi  README.solaris-x86-ATAPI-DMA  README.solaris-x86-ata-DMA  README.sony  README.sun-lofi  README.verify  README.volmgt  Rata-dma.mk  Ratapi-dma.mk  Ratapi.mk  Raudio.mk  Rcdplus.mk  Rcdrw.mk  Rcdtext.mk  Rclone.mk  Rcopy.mk  Rdisktattoo.mk  Rmulti.mk  Rparallel.mk  Rraw.mk  Rrscsi.mk  Rsony.mk  (+60 more)
cdrtools-3.02a09/conf/: Makefile  cc-config.sh  install-sh  makeinc  mkdep-aix.sh  mkdep-hpux.sh  mkdep-msc-interix.sh  mkdep-msc.sh  mkdep-sco.sh  mkdir-sh  mkdir.sh  oarch.sh  post.html  pre.html  runrmt_android  runrmt_rsh  runrmt_ssh  setup.sh  src-get  srcroot.sh  wget.sh  xconfig.mk
cdrtools-3.02a09/doc/: btcflash.man  btcflash.ps  cdda2ogg.man  cdda2ogg.ps  cdda2wav.man  cdda2wav.ps  cdrecord.man  cdrecord.ps  isoinfo.man  isoinfo.ps  mkisofs.man  (+7 more)
licenses/: cdirip-0.6.3-2.txt  dcdib.txt
(+936 files in other folders)
